syntax = "proto3";

option csharp_namespace = "Plebis.Services";

package services;

// The greeting service definition.
service Membership {
  // Sends a greeting
  rpc AddMember (AddMemberRequest) returns (AddMemberResponse);
  rpc AllMemberships (GetMembersRequest) returns (GetMembersResponse);
}

enum MembershipStatus {
  MEMBERSHIP_UNKNOWN = 0;
  MEMBERSHIP_ADDED = 1;
  MEMBERSHIP_REMOVED = 2;
  MEMBERSHIP_REJECTED = 100;
}

message MemberLink {
	string organization = 1;
	string member = 2;
}

// The request message containing the user's name.
message AddMemberRequest {
  string organization = 1;
  string subject = 2;
  string type = 3;
}

// The response message containing the greetings.
message AddMemberResponse {
  string membershipId = 1;
  MembershipStatus status = 2;
}

message GetMembersRequest {
	string organization = 1;
}

message GetMembersResponse {
	repeated MemberLink members = 1;
}